# learn-python

./: pyproject.toml
notebooks/02-python-statements/: 07-statements-test.ipynb
